--- a/react-shop-ts/package.json
+++ b/react-shop-ts/package.json
@@ -10,22 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@firebase/analytics": "^0.10.18",
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-solid-svg-icons": "^7.0.0",
     "@fortawesome/react-fontawesome": "^0.2.3",
     "@heroicons/react": "^2.2.0",
+    "@react-firebase/auth": "^0.2.10",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/node": "^24.1.0",
     "axios": "^1.9.0",
+    "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.2",
     "@types/react-redux": "^7.1.34",
     "@types/react-router-dom": "^5.3.3",
