--- a/react-shop-ts/vercel.json
+++ b/react-shop-ts/vercel.json
@@ -1,5 +1,9 @@
 {
+  "version": 2,
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "builds": [
+    { "src": "dist/**", "use": "@vercel/static" }
   ]
 }
