ref: routes, config

--- a/react-shop-ts/vercel.json
+++ b/react-shop-ts/vercel.json
@@ -1,9 +1,22 @@
 {
   "version": 2,
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
+  "routes": [
+    {
+      "src": "/.*",
+      "dest": "/index.html",
+      "methods": ["GET"]
+    }
   ],
   "builds": [
-    { "src": "dist/**", "use": "@vercel/static" }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
