ref: routes, config2

--- a/react-shop-ts/vercel.json
+++ b/react-shop-ts/vercel.json
@@ -1,22 +1,1 @@
-{
-  "version": 2,
-  "routes": [
-    {
-      "src": "/.*",
-      "dest": "/index.html",
-      "methods": ["GET"]
-    }
-  ],
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
-}
+{ "rewrites": [{ "source": "/(.*)", "destination": "/" }] }
