--- a/react-shop-ts/package.json
+++ b/react-shop-ts/package.json
@@ -1,11 +1,14 @@
 {
+  "engines": {
+    "node": ">=18.x"
+  },
   "name": "react-shop-ts",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
